--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1185,15 +1185,6 @@ as in both usage scenarios we assume different semantics and as for these constr
 \section{Reasoning}
 \label{reasoning}
 
-\emph{OWL 2} profiles are restricted versions of \emph{OWL 2} that offer different trade-offs regarding expressivity vs. efficiency in reasoning. 
-\emph{OWL 2 QL} is an \emph{OWL 2} profile which focuses on reasoning in the context of query answering with very large size of instance data. 
-\emph{OWL 2 QL} is based on the \textit{DL-Lite} family of \emph{DL} \cite{Artale2009,Calvanese2007}.
-\emph{OWL 2 DL} was standardized as a \emph{DL}-like formalism with high expressivity, yet maintains decidability for main reasoning tasks.
-As a result of its expressive power, \emph{OWL 2 DL} allows a large variety of sophisticated modeling capabilities for many application domains.
-The drawback of its expressive power results as a lack of computational efficiency in performance. 
-
------
-
 % Feedback Christian
 %-------------------
 %- better explain difference between C_R and C_R'
@@ -1215,17 +1206,18 @@ The drawback of its expressive power results as a lack of computational efficien
 
 Validation environments should enable users to select which constraint types to use for completing data by reasoning 
 and which ones should be considered as constraint types about data accuracy and completeness which could be checked over the data once completed using reasoning.
-Therefore, we investigate the affect of reasoning to the validation process of each constraint type, i.e.,
-we examine if reasoning can be performed prior to validation to enhance data quality
+Therefore, we investigate the effect of reasoning to the validation process of each constraint type, i.e.,
+we examine for each constraint type if reasoning may be performed prior to validation in order to enhance data quality
 either (1) by resolving violations or (2) by raising valuable violations.
+
 We denote the whole set of constraint types with $\mathcal{CT}$ which we divide into two disjoint sets: 
-(1) $\mathcal{CT}_R$ is the set of constraint types for which reasoning can be performed prior to validation (especially when not all the knowledge is explicit) in order to enhance data quality
+(1) $\mathcal{R}$ is the set of constraint types for which reasoning may be performed prior to validation (especially when not all the knowledge is explicit) in order to enhance data quality
 either by resolving violations or by raising valuable violations.
 %that can carry out the validation process via reasoning, especially when not all the knowledge is explicit.  
-(2) $\overline{\mathcal{CT}_{R}}$  denotes the complement that is the set of constraint types for which reasoning cannot be done or 
+(2) $\overline{\mathcal{R}}$  denotes the complement that is the set of constraint types for which reasoning cannot be done or 
 for which reasoning does not improve data quality in any obvious sense.
 
-{\em Sub-Properties} (\emph{R-54/64}) is an example of a $\mathcal{CT}_R$ constraint type for which reasoning can be performed prior to validation to enhace data quality.
+{\em Sub-Properties} (\emph{R-54/64}) is an $\mathcal{R}$ constraint type.
 %corresponds to axioms in \emph{OWL 2}
 If a \emph{journal volume}, e.g., has an {\em editor} relationship to a \emph{person}, 
 then the \emph{journal volume} must also have a {\em creator} relationship to the same \emph{person} {\small\ms{(editor $\sqsubseteq$ creator),}}i.e., 
@@ -1236,7 +1228,7 @@ If this triple is not stated, a constraint violation occurs.
 If we use \emph{sub-properties} with reasoning, however, the required triple is inferred which resolves the violation.
 
 {\em Literal Pattern Matching} (\emph{R-44}), which restricts literals to match given patterns,
-is an example of a $\overline{\mathcal{CT}_R}$ constraint type:
+is an $\overline{\mathcal{R}}$ constraint type:
 % \er{DL can naturally express datatypes. All you need to do is to define \emph{DroidNumber} as a concrete domain.}\tb{resolved}  
 \begin{ex}
 ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
@@ -1272,14 +1264,31 @@ as a data range expression is restricted to the predefined datatypes and the int
 %If this triple is not stated, a constraint violation occurs.
 %If we use sub-properties with reasoning, the triple (which would cause a constraint violation) is inferred and therefore resolves the possible constraint violation.
 
+\begin{itemize}
+  \item \textcolor{red}{Reviewer1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
+%	\item \textcolor{red}{Erman: we mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. }
+%	\item \textcolor{red}{The first paragraph is confusing. Refer to what? Follows? }
+\end{itemize}
+
+For each constraint type we investigate how efficient in terms of runtime reasoning is performed.
+Since the combination of \emph{DL} constructs, needed to express a constraint type, determines its computational complexity, 
+by mapping to \emph{DL} we get an idea of the performance for each constraint type in worst case.
+
 \subsection{Constraint Types with Reasoning}
 \label{sec:RDF-validation-requirements-and-reasoning}
 
-$\mathcal{CT}_R$ is the set of constraint types for which reasoning can be performed prior to validation 
+$\mathcal{R}$ is the set of constraint types for which reasoning can be performed prior to validation 
 in order to enhance data quality either by resolving violations or by causing additional useful violations.
-We distinguish between two disjoint sub sets of $\mathcal{CT}_R$:
+We distinguish between two disjoint sub sets of $\mathcal{R}$:
 (1) Constraint types for which \emph{OWL 2 QL reasoning} can be performed as they are expressible by \emph{OWL 2 QL}.
 (2) Constraint types for which \emph{OWL 2 DL reasoning} can be executed as \emph{OWL 2 QL} is not expressive enough to represent these constraint types \cite{owl2profiles2008}.
+
+\emph{OWL 2} profiles are restricted versions of \emph{OWL 2} that offer different trade-offs regarding expressivity vs. efficiency in reasoning. 
+\emph{OWL 2 QL} is an \emph{OWL 2} profile which focuses on reasoning in the context of query answering with very large size of instance data. 
+\emph{OWL 2 QL} is based on the \textit{DL-Lite} family of \emph{DL} \cite{Artale2009,Calvanese2007}.
+\emph{OWL 2 DL} was standardized as a \emph{DL}-like formalism with high expressivity, yet maintains decidability for main reasoning tasks.
+As a result of its expressive power, \emph{OWL 2 DL} allows a large variety of sophisticated modeling capabilities for many application domains.
+The drawback of its expressive power results as a lack of computational efficiency in performance. 
 
 %Reasoning and validation are very closely related. 
 %Reasoning is the process of determining what follows from what has been
@@ -1410,7 +1419,7 @@ since it is not explicitly stated that \emph{Tolkien} is a \emph{person}.
 \subsection{Constraint Types without Reasoning}
 \label{RDF-Validation-Requirements-without-Reasoning}
 
-$\overline{\mathcal{CT}_{R}}$ is the set of constraint types for which reasoning cannot be done or 
+$\overline{\mathcal{R}}$ is the set of constraint types for which reasoning cannot be done or 
 for which reasoning does not improve data quality in any obvious sense.
 %\textcolor{red}{For the majority of the constraint types, reasoning is not needed to be performed prior to validation.
 %It is possible, however, to execute reasoning before validating constraints for which reasoning does not affect validation results.}
@@ -1542,7 +1551,7 @@ Publication { ( isbn xsd:string | issn xsd:string ) }
 %As Darth Sidious has both relationships, a constraint Violation is raised.
 
 %\textbf{Expressible by Other Constraint Languages.}
-The majority of the $\overline{\mathcal{CT}_{R}}$ constraint types can neither be expressed by \emph{OWL 2 QL} nor by \emph{OWL 2 DL}, 
+The majority of the $\overline{\mathcal{R}}$ constraint types can neither be expressed by \emph{OWL 2 QL} nor by \emph{OWL 2 DL}, 
 but by other constraint languages like \emph{DSP}, \emph{ShEx}, \emph{ReSh}, or \emph{SPIN}.
 {\em Default values} (\emph{R-31/38})
 for properties are expressible by \emph{ReSh} and \emph{SPIN}.
@@ -1607,25 +1616,18 @@ Semantic-Web-Publication a ResourceShape ; property [
 \label{sec:constraints-complexity}
 %\tb{I think this sub section is not that fluently to read}
 
-\begin{itemize}
-  \item \textcolor{blue}{incorporate complexity in reasoning section} 
-  \item \textcolor{red}{Reviewer1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
-%	\item \textcolor{red}{Erman: we mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. }
-%	\item \textcolor{red}{The first paragraph is confusing. Refer to what? Follows? }
-\end{itemize}
-
 Since the combination of \emph{DL} constructs, needed to express a constraint type, determines its computational complexity, 
 by mapping to \emph{DL} we get an idea of the performance for each constraint type in worst case.
-We divide $\mathcal{CT}_R$ into two not disjoint sets of constraint types: 
-$\mathcal{CT}_R ^{\mathcal{QL}} \subseteq \mathcal{CT}_R ^{\mathcal{DL}}$ (\emph{OWL 2 DL} is more expressive than \emph{OWL 2 QL}).
+We divide $\mathcal{R}$ into two not disjoint sets of constraint types: 
+$\mathcal{R}_{QL}$ $\subseteq$ $\mathcal{R}_{DL}$ (\emph{OWL 2 DL} is more expressive than \emph{OWL 2 QL}).
 According to the execution of reasoning prior to validation, we distinguish three different types of validation: 
 \begin{enumerate}\itemsep0.5em
-	\item $\overline{\mathcal{CT}_R}$ denotes the set of constraint types for which validation is performed by query answering without reasoning.
+	\item $\overline{\mathcal{R}}$ denotes the set of constraint types for which validation is performed by query answering without reasoning.
 	\item $\mathcal{R}_{QL}$ is the set of constraint types which are expressible by \emph{OWL 2 QL} and for which validation is executed by query answering with \emph{OWL 2 QL} reasoning.
-	\item $\mathcal{CT}_R ^{\mathcal{DL}}$ stands for the set of constraint types which are expressible by \emph{OWL 2 DL} and for which validation is run by query answering with \emph{OWL 2 DL} reasoning.
+	\item $\mathcal{R}_{DL}$ stands for the set of constraint types which are expressible by \emph{OWL 2 DL} and for which validation is run by query answering with \emph{OWL 2 DL} reasoning.
 \end{enumerate}
-We limit $\mathcal{CT}_R$ to the set of constraint types which can be expressed by \emph{OWL 2 DL} %and still require reasoning 
-($\mathcal{CT}_R$ = $\mathcal{CT}_R ^{\mathcal{DL}}$), as \emph{OWL 2 DL} is still quite expressive.
+We limit $\mathcal{R}$ to the set of constraint types which can be expressed by \emph{OWL 2 DL} %and still require reasoning 
+($\mathcal{R}$ = $\mathcal{R}_{DL}$), as \emph{OWL 2 DL} is still quite expressive.
 %\footnote{Alternatively, it could be set to a more expressive language (e.g., \emph{OWL 2 Full}).}. %Such treatment can be done in future work, if it is understood that we require that.}. 
 Some of these constraint types can also be represented by constraint languages which is the focus of the next section.
 %The complexity class $\mathcal{CT}_R$ encompasses all \emph{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  \er{What/Why can't  be expressed by OWL 2  while being inferred? }\tb{e.g. class-specific property ranges or class-specific reflexive object properties cannot be expressed in OWL / these 2 axioms can only be stated globally for the properties, we cannot restrict it to individuals of specific classes}
@@ -1640,11 +1642,11 @@ Since reasoning makes difference  for some validation types, we note them with t
 \begin{tabular}{>{\centering\arraybackslash}m{1.5in} | >{\centering\arraybackslash}m{1in}} 
 \textbf{Validation Type}  & \textbf{Complexity Class}\\
 \hline
-$\overline{\mathcal{CT}_R}$ & \textsc{Pspace}-Complete \\[7pt] 
+$\overline{\mathcal{R}}$ & \textsc{Pspace}-Complete \\[7pt] 
 \hline
-$\mathcal{CT}_R ^{\mathcal{QL}}$ & \textsc{Ptime} \\[7pt]
+$\mathcal{R}_{QL}$ & \textsc{Ptime} \\[7pt]
 \hline
-$\mathcal{CT}_R ^{\mathcal{DL}}$ & \textsc{N2exptime} \\[7pt]
+$\mathcal{R}_{DL}$ & \textsc{N2exptime} \\[7pt]
 \end{tabular}
 \label{tab:constraint-type-specific-complexity-classes}
 \end{table}
